--- a/after/package.json
+++ b/after/package.json
@@ -10,9 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "config": "^3.3.8",
+    "dotenv": "^16.0.3",
     "express": "^4.16.2",
     "fawn": "^2.1.5",
     "joi": "^13.1.0",
-    "mongoose": "^5.0.2"
+    "joi-objectid": "^4.0.2",
+    "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
+    "mongoose": "^5.0.2",
+    "nodemon": "^2.0.20"
   }
 }
